Adding reservation functionality
